--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -55,14 +55,14 @@
             android:textColor="@color/colorIcons" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btnFavorites"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:background="@color/colorPrimary"
-            android:text="Button"
+            android:text="@string/favorites"
             android:textColor="@color/colorIcons" />
     </LinearLayout>
 
