--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -33,7 +33,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:background="@color/colorPrimary"
-            android:text="@string/search"
+            android:text="@string/filter"
             android:textColor="@color/colorIcons" />
     </LinearLayout>
 
