--- a/app/src/main/res/layout/fragment_dialogs.xml
+++ b/app/src/main/res/layout/fragment_dialogs.xml
@@ -10,5 +10,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDialogs"
         android:layout_width="match_parent"
+        android:scrollbars="vertical"
         android:layout_height="match_parent" />
 </LinearLayout>
