--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -25,7 +25,8 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
-                android:hint="@string/actor" />
+                android:hint="@string/actor"
+                android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -39,7 +40,8 @@
                 android:id="@+id/etCharacterName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/character" />
+                android:hint="@string/character"
+                android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
@@ -61,7 +63,8 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginRight="20dp"
-                android:hint="@string/dialog_text" />
+                android:hint="@string/dialog_text"
+                android:textSize="24sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -71,9 +74,11 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
+            android:height="60sp"
             android:background="@color/colorPrimary"
-            android:text="@string/search"
+            android:text="@string/filter"
             android:textColor="@color/colorIcons"
+            android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
 
