--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,10 @@
         android:layout_marginRight="20dp"
         android:background="@color/colorPrimary"
         android:text="@string/explore"
-        android:textColor="@color/colorIcons" />
+        android:textColor="@color/colorIcons"
+        android:textSize="24sp"
+        android:height="60sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnSearchActivity"
@@ -28,18 +31,24 @@
         android:layout_marginRight="20dp"
         android:background="@color/colorPrimary"
         android:text="@string/filter"
-        android:textColor="@color/colorIcons" />
+        android:textColor="@color/colorIcons"
+        android:textSize="24sp"
+        android:height="60sp"
+        android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnSmalltalk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
+        android:height="60sp"
         android:layout_marginRight="20dp"
         android:background="@color/colorPrimary"
-        android:text="Button"
-        android:textColor="@color/colorIcons" />
+        android:text="@string/small_talk"
+        android:textColor="@color/colorIcons"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnFavorites"
@@ -48,7 +57,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
+        android:height="60sp"
         android:background="@color/colorPrimary"
         android:text="@string/favorites"
-        android:textColor="@color/colorIcons" />
+        android:textColor="@color/colorIcons"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 </LinearLayout>
