--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -21,9 +21,12 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
+            android:height="60sp"
             android:background="@color/colorPrimary"
             android:text="@string/explore"
-            android:textColor="@color/colorIcons" />
+            android:textColor="@color/colorIcons"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnSearchActivity"
@@ -32,9 +35,12 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
+            android:height="60sp"
             android:background="@color/colorPrimary"
             android:text="@string/filter"
-            android:textColor="@color/colorIcons" />
+            android:textColor="@color/colorIcons"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
@@ -44,15 +50,18 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btnSmalltalk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
+            android:height="60sp"
             android:background="@color/colorPrimary"
-            android:text="Button"
-            android:textColor="@color/colorIcons" />
+            android:text="@string/small_talk"
+            android:textColor="@color/colorIcons"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btnFavorites"
@@ -61,9 +70,12 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
+            android:height="60sp"
             android:background="@color/colorPrimary"
             android:text="@string/favorites"
-            android:textColor="@color/colorIcons" />
+            android:textColor="@color/colorIcons"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
