--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,7 +19,8 @@
             android:id="@+id/etActorName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/actor" />
+            android:hint="@string/actor"
+            android:textSize="24sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -33,7 +34,8 @@
             android:id="@+id/etCharacterName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/character" />
+            android:hint="@string/character"
+            android:textSize="24sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -47,7 +49,8 @@
             android:id="@+id/etDialogText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/dialog_text" />
+            android:hint="@string/dialog_text"
+            android:textSize="24sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -57,9 +60,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="20dp"
-        android:text="@string/search"
+        android:height="60sp"
         android:background="@color/colorPrimary"
+        android:text="@string/filter"
         android:textColor="@color/colorIcons"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
 </LinearLayout>
