--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -6,13 +6,14 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        card_view:cardBackgroundColor="@color/cardview_light_background"
-        card_view:cardCornerRadius="8dp"
-        card_view:cardElevation="2dp"
-        card_view:cardUseCompatPadding="false"
-        android:layout_margin="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:focusable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_margin="5dp"
+        card_view:cardBackgroundColor="@color/colorPrimary"
+        card_view:cardElevation="5dp"
+        card_view:cardUseCompatPadding="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,7 +29,9 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="8dp"
                 android:gravity="center_horizontal"
-                android:textSize="18sp"
+                android:textAllCaps="true"
+                android:textColor="@color/colorIcons"
+                android:textSize="24sp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -43,14 +46,16 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginBottom="5dp"
                     android:layout_weight="9"
-                    android:textSize="12sp" />
+                    android:textColor="@color/colorIcons"
+                    android:textSize="15sp" />
 
                 <ImageView
                     android:id="@+id/ivFavorite"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
                     android:layout_gravity="bottom"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_weight="1"
                     android:clickable="true"
                     android:contentDescription="@string/is_favorite"
