--- a/app/src/main/res/layout-land/activity_search.xml
+++ b/app/src/main/res/layout-land/activity_search.xml
@@ -78,8 +78,7 @@
             android:background="@color/colorPrimary"
             android:text="@string/filter"
             android:textColor="@color/colorIcons"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textSize="24sp" />
     </LinearLayout>
 
 </LinearLayout>
