--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:height="60sp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_style"
         android:text="@string/explore"
         android:textColor="@color/colorIcons"
         android:textSize="24sp"
@@ -30,7 +30,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
         android:height="60sp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_style"
         android:text="@string/filter"
         android:textColor="@color/colorIcons"
         android:textSize="24sp"
@@ -44,7 +44,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
         android:height="60sp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_style"
         android:text="@string/small_talk"
         android:textColor="@color/colorIcons"
         android:textSize="24sp"
@@ -58,7 +58,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"
         android:height="60sp"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_style"
         android:text="@string/favorites"
         android:textColor="@color/colorIcons"
         android:textSize="24sp"
