--- a/app/src/main/res/layout/character_layout.xml
+++ b/app/src/main/res/layout/character_layout.xml
@@ -19,15 +19,16 @@
             android:id="@+id/tvCharacterName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginBottom="16dp"
             android:gravity="center"
             android:textAllCaps="true"
             android:textColor="@color/colorIcons"
             android:textSize="24sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/button_style"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"/>
 
     </androidx.cardview.widget.CardView>
 
