--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -11,7 +11,6 @@
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:layout_margin="5dp"
-        card_view:cardBackgroundColor="@color/colorPrimary"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="false">
 
@@ -19,7 +18,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="10"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/button_style">
 
             <TextView
                 android:id="@+id/tvDialogFrom"
