Added smalltalk activity

--- a/app/src/main/res/layout-land/activity_smalltalk.xml
+++ b/app/src/main/res/layout-land/activity_smalltalk.xml
@@ -5,16 +5,18 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryLight"
     android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".activities.SmalltalkActivity">
+    android:orientation="horizontal"
+    tools:context=".activities.SmalltalkActivity"
+    android:baselineAligned="false">
 
     <TextSwitcher
         android:id="@+id/tsSmalltalkTop"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="20dp"
         android:layout_weight="1"
         android:background="@drawable/button_style"
         android:gravity="center"
@@ -30,21 +32,19 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:textSize="24sp"
-            android:textColor="@color/colorIcons" />
+            android:textColor="@color/colorIcons"/>
     </TextSwitcher>
-
     <TextSwitcher
         android:id="@+id/tsSmalltalkBottom"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:layout_weight="1"
-        android:gravity="center"
         android:background="@drawable/button_style"
-        android:padding="16dp" >
+        android:gravity="center"
+        android:padding="16dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
